<resources>
    <string name="app_name">Comflix</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_movies">Top movies</string>
    <string name="top_series">Top series</string>
    <string name="in_cinemas">In cenima</string>
    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="trending_movies">Trending movies</string>
    <string name="see_seasons">see seasons</string>
    <string name="episodes">Episodes</string>>
    <string name="seasons_lable">Seasons</string>
    <string name="see_cast_and_crew">See Cast and Crew</string>
    <string name="you_may_also_like_these_movies">You may also like these movies</string>
    <string name="duration">Duration:</string>
    <string name="genre">Genre:</string>
    <string name="stars">Stars:</string>
    <string name="writers">Writers:</string>
    <string name="director">Director:</string>
    <string name="released">Released:</string>
    <string name="description_and_details">Description and details</string>
    <string name="movie_cast_and_crew">Movie Cast and Crew</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="filmography">Filmography</string>
    <string name="date_of_birth">Date of birth: </string>
    <string name="biography">Biography: </string>
    <string name="title">Title:</string>
    <string name="add_comment">Add comment</string>
    <string name="current_user">Abdelkrim Bournane</string>
    <string name="empty_string">Cannot be empty</string>
    <string name="see_episodes">see episodes</string>
    <string name="list_of_cinemas">List of Cinemas</string>
    <string name="my_cinemas_6">My cinemas(+12)</string>
    <string name="near">Near</string>
    <string name="title_activity_maps">Map</string>
    <string name="cinema">Cinema:</string>
    <string name="location">Location:</string>
    <string name="movies_in_projection">Movies in projection</string>
    <string name="results">results</string>
    <string name="url">https://api.themoviedb.org/3/</string>
    <string name="overview">overview</string>
    <string name="movie_url">movie/now_playing?api_key=b73297ba2fd4486c8d1e39f3e8d0c0e4</string>
    <string name="image_url">https://image.tmdb.org/t/p/w300/</string>
    <string name="small_image_url">https://image.tmdb.org/t/p/w200/</string>

    <string name="place_of_birth">Place of birth:</string>
    <string name="txt_episode_duration">Episode duration:</string>
    <string name="txt_first_release">First release:</string>
    <string name="txt_last_release">Last release:</string>
    <string name="txt_season">Season</string>
    <string name="txt_date_de_diffusion">Date de diffusion:</string>

</resources>
