<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/text"
    tools:context="com.example.slash.comflix.fragment.MovieDetailsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_image_height"
            android:src="@drawable/suits"
            android:id="@+id/movieCover"
            android:scaleType="centerCrop"
            />
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignEnd="@+id/movieCover"
              android:paddingRight="10dp"
              android:layout_marginTop="@dimen/btn_margin_top"
              >

              <android.support.design.widget.FloatingActionButton
                  android:id="@+id/cinema"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="end|bottom"
                  android:src="@drawable/ic_videocam_black_24dp"
                  app:backgroundTint="@color/redColor"
                  />
          </LinearLayout>
       </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        style="@style/textdetailsLabel"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/director"
                        style="@style/textdetailsLabel"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/director"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/writers"
                        style="@style/textdetailsLabel"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/writers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stars"
                    style="@style/textdetailsLabel"/>
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        style="@style/textdetailsLabel"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        style="@style/textdetailsLabel"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/released"
                        style="@style/textdetailsLabel"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/releae_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                      />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/textdetailsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_and_details" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <android.support.v7.widget.AppCompatTextView
                    style="@style/textdetailsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_cast_and_crew" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/actorsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/icons"
                    android:clipToPadding="false"
                    android:scrollbars="vertical"/>
                <android.support.v7.widget.AppCompatTextView
                    style="@style/textdetailsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_may_also_like" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/moviesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/icons"
                    android:clipToPadding="false"
                    android:scrollbars="vertical"/>


            </LinearLayout>

    </LinearLayout>
</ScrollView>