<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context="com.example.slash.comflix.fragment.MovieDetailsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <android.support.v7.widget.AppCompatTextView
            style="@style/cinema_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_of_cinemas"
            android:padding="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
          >
        <Button
            android:id="@+id/see_favourite_cinema"
            android:layout_width="190dp"
            android:layout_height="54dp"
            style="@style/btn_style"
            android:text="@string/my_cinemas_6"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_favorite_black_24dp"

            />
            <Button
                android:id="@+id/near_cinema"
                android:layout_width="124dp"
                android:layout_height="54dp"
                style="@style/btn"
                android:paddingLeft="5dp"
                android:drawableLeft="@drawable/ic_location_on_24dp"
                android:layout_toEndOf="@+id/see_favourite_cinema"
                android:text="@string/near" />
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cinemaRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="vertical"/>

        </LinearLayout>



</ScrollView>