<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/text"
    tools:context="com.example.slash.comflix.fragment.MovieDetailsFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/dyl"
            android:id="@+id/personPicture"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="5dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    style="@style/textdetailsLabel"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="5dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    style="@style/textdetailsLabel"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/date_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="5dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biography"
                    style="@style/textdetailsLabel"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/biography"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <android.support.v7.widget.AppCompatTextView
                style="@style/textdetailsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filmography" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/filmRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/icons"
                android:clipToPadding="false"
                android:scrollbars="vertical"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>