<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/text"
    android:orientation="vertical"
    tools:context="com.example.slash.comflix.fragment.CinemaDetailsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_image_height"
                android:src="@drawable/suits"
                android:id="@+id/cinemaPicture"
                android:scaleType="centerCrop"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cinema"
                    style="@style/textdetailsLabel"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/cinema"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    style="@style/textdetailsLabel"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Number of rooms:"
                    style="@style/textdetailsLabel"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/num_salle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <android.support.v7.widget.AppCompatTextView
                style="@style/textdetailsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies_in_projection"
                android:padding="3dp"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/moviesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/icons"
                android:clipToPadding="false"
                android:scrollbars="vertical"/>



        </LinearLayout>

    </LinearLayout>
</ScrollView>